fix image alignment

--- a/src/static/scss/_components.cards.scss
+++ b/src/static/scss/_components.cards.scss
@@ -2,6 +2,15 @@
   width: min-content;
 }
 
+.discourse-card-image{
+  margin: auto;
+  display: block;
+  height:210px;
+  height: 210px;
+  display: block;
+  margin: auto;
+}
+
 .card-list {
   display: flex;
   justify-content: flex-start;
